grafana/ns.telemetry.yaml
# base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: telemetry
