grafana/deployment.grafana.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: telemetry
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: grafana-main
    app.kubernetes.io/version: "9.1.5"
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: grafana
  annotations:
    reloader.stakater.com/auto: "true" # https://github.com/stakater/Reloader
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grafana
        app.kubernetes.io/instance: grafana-main
        app.kubernetes.io/version: "10.4.5"
        app.kubernetes.io/component: server
        app.kubernetes.io/part-of: grafana
    spec:
      serviceAccountName: grafana
      containers:
      # === MAIN GRAFANA CONTAINER ===
      - name: grafana
        image: grafana/grafana:10.4.5
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        resources: # Pulled these from the grafana deployment in kube-prometheus-stack https://github.com/prometheus-operator/kube-prometheus
          limits:
            cpu: 200m # https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/#meaning-of-cpu
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          initialDelaySeconds: 60
          timeoutSeconds: 30
          failureThreshold: 10
          httpGet:
            port: http
            path: /api/health
            scheme: HTTP
        readinessProbe:
          httpGet:
            port: http
            path: /api/health
            scheme: HTTP
        volumeMounts:
          - name: datasources
            mountPath: /etc/grafana/provisioning/datasources
          - name: dashboards
            mountPath: /tmp/dashboards
          - name: dashboards-provider
            mountPath: /etc/grafana/provisioning/dashboards/provider.yaml
            subPath: provider.yaml
      # === LOAD DASHBOARDS SIDECAR ===
      - name: load-dashboards
        image: kiwigrid/k8s-sidecar:1.19.6 #simspace/k8s-sidecar:1.19.6_v0.0.2
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: dashboards
            mountPath: /tmp/dashboards
      volumes:
        - name: datasources
          emptyDir: { }
        - name: dashboards
          emptyDir: {}
        - name: dashboards-provider
          configMap:
            name: grafana-dashboards-provider
