grafana/service.grafana.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: telemetry
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: grafana-main
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: grafana

spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: grafana-main
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: grafana
  ports:
  - name: http
    port: 3000
    targetPort: http
    protocol: TCP
