grafana/ingress.grafana.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: telemetry
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: grafana-main
    app.kubernetes.io/version: "9.1.5"
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: grafana
spec:
  ingressClassName: nginx
  rules:
    - host: "grafana.local.kube"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  name: http
